<resources>
    <string name="app_name">Survey</string>
    <string name="welcome">Welcome</string>
    <string name="start_survey">Start Survey</string>
    <string name="question">Question %1$s/%2$s</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="questions_submitted">Questions submitted: %1$s</string>
    <string name="type_here_for_an_answer">Type here for an answer</string>
    <string name="already_submitted">Already submitted</string>
    <string name="success">Success!</string>
    <string name="failure">Failure…</string>
</resources>