...
                style = MaterialTheme.typography.headlineMedium.copy()
            )

            if (question.submissionAlert == SubmissionAlert.FAILURE) {
                Button(onClick = onAnswerSubmit) {
                    Text(
                        text = "Retry",
                        style = MaterialTheme.typography.titleMedium
                    )
                }
            }
        }

...
