...
) {
    Box(modifier = Modifier.fillMaxSize()) {
        when (state.asyncQuestions) {
            is Async.Failure -> onQuestionFailure()
            is Async.Loading, Async.Uninitialized -> CircularProgressIndicator(
                modifier = Modifier.align(Alignment.Center)
                    .testTag("Loader")
            )

            is Async.Success -> {
                Column(
                    modifier = Modifier.fillMaxSize(),
                    verticalArrangement = Arrangement.spacedBy(64.dp)
...
